--- a/src/custom.css
+++ b/src/custom.css
@@ -1,6 +1,14 @@
-body {
-    padding-top: 120px
+html,body{
+    height: 100vh;
+    overflow: auto;
 }
+
+body {
+    padding-top: 120px;
+    background: linear-gradient(to bottom, #2c3e50, #4ca1af);
+
+}
+
 
 pre {
     background: #f7f7f9
@@ -97,7 +105,7 @@ pre {
 }
 
 .bs-component .card {
-    margin-bottom: 1rem
+    margin-bottom: 1rem;
 }
 
 .bs-component .modal {
@@ -303,3 +311,55 @@ pre {
         text-align   : center
     }
 }
+
+.color {
+    background-color: rgba(0,0,0,0.3);
+    border: solid 1px black;
+    border-radius: 5px;
+    color:white;
+}
+
+.color:disabled{
+    background-color: rgba(0,0,0,0.3);
+    border: solid 1px black;
+    border-radius: 5px;
+    color:white;
+}
+*:-webkit-autofill{
+    border: 1px solid black;
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px rgba(0,0,0,0) inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
+
+select option {
+    background-color: #181818;
+    font-weight: bold;
+    color: white;
+}
+
+.color:focus {
+    background-color: rgba(0,0,0,0.5);
+    border: solid 1px black;
+    border-radius: 5px;
+    color:white;
+}
+
+.nav-bar-color {
+    background:rgba(0,0,0,0.8);
+    color:white;
+}
+
+
+
+.menu-color {
+    color:white;
+}
+.menu-color:hover {
+    color: #4a9aa9;
+}
+
+
+
+
